--- a/THB_AR_Aquarium/Packages/manifest.json
+++ b/THB_AR_Aquarium/Packages/manifest.json
@@ -5,9 +5,11 @@
     "com.unity.ide.visualstudio": "2.0.11",
     "com.unity.ide.vscode": "1.2.3",
     "com.unity.learn.iet-framework": "1.2.3",
+    "com.unity.netcode.gameobjects": "1.0.1",
     "com.unity.test-framework": "1.1.27",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.4.8",
+    "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.2",
     "com.unity.ugui": "1.0.0",
     "com.unity.xr.arcore": "4.1.7",
     "com.unity.xr.arfoundation": "4.1.7",
@@ -15,6 +17,7 @@
     "com.unity.xr.magicleap": "6.2.2",
     "com.unity.xr.management": "4.0.7",
     "com.unity.xr.windowsmr": "4.5.0",
+    "com.veriorpies.parrelsync": "https://github.com/VeriorPies/ParrelSync.git?path=/ParrelSync",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
